PGC/K8-advisorsy/webapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: advisorsypanel-deployment
  labels:
    app: advisorsypanel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: advisorsypanel
  template:
    metadata:
      labels:
        app: advisorsypanel
    spec:
      containers:
      - name: webapp
        image: dvaldaliso/advisorsy:1.0
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
spec:
  type: NodePort
  selector:
    app: advisorsypanel
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30080
